--- a/gridLayout.html
+++ b/gridLayout.html
@@ -13,5 +13,13 @@
     <main class="item4">Right</main>
     <footer class="item5">Footer</footer>
 </div>
+<div class="grid-container2">
+    <div class="item">1</div>
+    <div class="item">2</div>
+    <div class="item">3</div>
+    <div class="item">4</div>
+    <div class="item">5</div>
+    <div class="item">6</div>
+</div>
 </body>
 </html>
