--- a/gridLayout.html
+++ b/gridLayout.html
@@ -13,6 +13,9 @@
     <main class="item4">Right</main>
     <footer class="item5">Footer</footer>
 </div>
+display BLOCK
+display: gird;
+grid-template-column: auto auto auto;
 <div class="grid-container2">
     <div class="item">1</div>
     <div class="item">2</div>
@@ -20,6 +23,17 @@
     <div class="item">4</div>
     <div class="item">5</div>
     <div class="item">6</div>
+</div>
+display INLINE BLOCK
+grid display:inline block;
+grid-template-column: auto auto auto;
+<div class="grid-container3">
+    <div  class="grid3">1</div>
+    <div  class="grid3">1</div>
+    <div  class="grid3">1</div>
+    <div  class="grid3">1</div>
+    <div  class="grid3">1</div>
+    <div  class="grid3">1</div>
 </div>
 </body>
 </html>
